--- a/style.css
+++ b/style.css
@@ -1,173 +1,58 @@
-body {
-  background-color: #515151;
-  padding: 0 16px;
-  padding-top: 60px;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+.watched {
+    background-color: rgba(0, 0, 255, 0.4);
+    color: white;
+    padding: 1em 1.5em;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
+.watched:hover {
+    color: grey;
+    text-decoration: none;
+}
+
+.notWatched:hover {
+    color: grey;
+    text-decoration: none;
+}
+
+.notWatched {
+    background-color: rgba(255, 0, 0, 0.4);
+    border-radius: 15px;
+    color: white;
+    padding: 1em 1.5em;
+    text-decoration: none;
+}
+
+.removeMovie {
+    background-color: rgba(170, 27, 63, 0.445);
+    border-radius: 50px;
+    color: white;
+    padding: 1em 1.5em;
+    text-decoration: none;
+}
+
+
+table {
+    border-collapse: collapse;
+    padding-left: 20%;
+    width: 100%;
 }
 
 table,
 td,
 th {
-  border: 1px solid #ddd;
-  padding: 15px;
-  text-align: center;
+    border: 1px solid #ddd;
+    padding: 15px;
+    text-align: center;
 }
 
-table {
-  border-collapse: collapse;
-  padding-left: 20%;
-  width: 100%;
+.container-md {
+    margin: auto;
+    width: 30%;
 }
 
-th a:link {
-  text-decoration: none;
-}
-
-th a:visited {
-  text-decoration: none;
-  color: black;
-}
-
-.watched {
-  background-color: blue;
-  color: white;
-  padding: 1em 1.5em;
-  text-decoration: none;
-}
-
-.notWatched {
-  background-color: red;
-  color: white;
-  padding: 1em 1.5em;
-  text-decoration: none;
-}
-
-input[type=button],
-input[type=submit],
-input[type=reset] {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-/* The container */
-.container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default radio button */
-.container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-
-/* Create a custom radio button */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 50%;
-}
-
-/* On mouse-over, add a grey background color */
-.container:hover input~.checkmark {
-  background-color: #ccc;
-}
-
-/* When the radio button is checked, add a blue background */
-.container input:checked~.checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the indicator (dot/circle) when checked */
-.container input:checked~.checkmark:after {
-  display: block;
-}
-
-/* Style the indicator (dot/circle) */
-.container .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: white;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
-.active {
-  background-color: #4CAF50;
-}
-
-select {
-  width: 100%;
-  padding: 16px 20px;
-  border: none;
-  border-radius: 4px;
-  background-color: #f1f1f1;
-  font-size: 18px;
-}
-
-input[type=text],
-input[type=email],
-input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-size: 18px;
+.container-lr {
+    margin: auto;
+    width: 80%;
 }
